--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,16 @@
-# Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+ ---
+![me.png](/images/me.png)
 
-## What is Nextra?
+# <h1> 안녕하세요! </h1> 
+# <h1> 항상 새로운 것을 지향하며 도전하는 </h1>
+# 1년차 개발자 이찬우입니다.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
 
-## Documentation
+이 블로그는 vercel의 nextjs blog 템플릿 ([Nextra](https://nextra.vercel.app/)) 로 작성되었습니다.
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+
+---
+
+- GitHub [@LChanwoo](https://github.com/LChanwoo)
+- Email chw210601@gmail.com
