--- a/pages/posts/JavaScript_Algorithm/Set.mdx
+++ b/pages/posts/JavaScript_Algorithm/Set.mdx
@@ -38,7 +38,7 @@
 
 ## [예제](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Set#%EC%98%88%EC%A0%9C)
 
-### `[Set` 객체 사용](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Set#set_%EA%B0%9D%EC%B2%B4_%EC%82%AC%EC%9A%A9)
+### [Set 객체 사용](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Set#set_%EA%B0%9D%EC%B2%B4_%EC%82%AC%EC%9A%A9)
 
 ```jsx
 var mySet = new Set();
@@ -163,7 +163,7 @@ setA.intersection(setC); // => Set [3, 4]
 setA.difference(setC); // => Set [1, 2]`
 ```
 
-### `[Array` 객체와의 관계](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Set#array_%EA%B0%9D%EC%B2%B4%EC%99%80%EC%9D%98_%EA%B4%80%EA%B3%84)
+### [Array 객체와의 관계](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Set#array_%EA%B0%9D%EC%B2%B4%EC%99%80%EC%9D%98_%EA%B4%80%EA%B3%84)
 
 ```jsx
 var myArray = ['value1', 'value2', 'value3'];
