--- a/pages/posts/JavaScript_Algorithm/Set.mdx
+++ b/pages/posts/JavaScript_Algorithm/Set.mdx
@@ -14,11 +14,11 @@
 
 ## [생성자](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Set#%EC%83%9D%EC%84%B1%EC%9E%90)
 
-`[Set()` (en-US)](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Set/Set)Creates a new `Set` object.
+[Set() (en-US)](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Set/Set)Creates a new `Set` object.
 
 ## [정적 속성](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Set#%EC%A0%95%EC%A0%81_%EC%86%8D%EC%84%B1)
 
-`[get Set[@@species]` (en-US)](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Set/@@species)파생 객체를 생성하는데 사용하는 생성자 함수입니다.
+[get Set[@@species] (en-US)](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Set/@@species)파생 객체를 생성하는데 사용하는 생성자 함수입니다.
 
 ## [인스턴스 속성](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Set#%EC%9D%B8%EC%8A%A4%ED%84%B4%EC%8A%A4_%EC%86%8D%EC%84%B1)
 
