--- a/pages/portfolios/Nextjs-blog.mdx
+++ b/pages/portfolios/Nextjs-blog.mdx
@@ -24,3 +24,15 @@ git 주소 : https://github.com/LChanwoo/nextjs-blog
 - nextra 테마를 이용한 블로그 제작
 
 - 관심분야에 대한 정리 및 기록
+
+# 사용된 기술
+
+- nextjs
+
+- nextra
+
+- react
+
+- react-markdown
+
+- react-Notion
