--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,16 +1,14 @@
+
+
+import {IndexPage} from '/components/IndexPage'
+
+<IndexPage/>
  
- ---
-![me.png](/images/me.png)
-
-# <h1> 안녕하세요! </h1> 
-# <h1> 항상 새로운 것을 지향하며 도전하는 </h1>
-# 1년차 개발자 이찬우입니다.
-
-
-이 블로그는 vercel의 nextjs blog 템플릿 ([Nextra](https://nextra.vercel.app/)) 로 작성되었습니다.
-
-
 ---
+        
+        이 블로그는 vercel의 nextjs blog 템플릿 ([Nextra](https://nextra.vercel.app/)) 로 작성되었습니다.
+        
+        
+        - GitHub [@LChanwoo](https://github.com/LChanwoo)
+        - Email chw210601@gmail.com
 
-- GitHub [@LChanwoo](https://github.com/LChanwoo)
-- Email chw210601@gmail.com
