이력서 수정

--- a/pages/portfolios/Nextjs-blog.mdx
+++ b/pages/portfolios/Nextjs-blog.mdx
@@ -6,7 +6,7 @@ import { Callout } from 'nextra-theme-docs'
 
 # Nextjs 블로그
 
-현재 보고계신 이 블로그를 만드는 프로젝트입니다.
+현재 보고 계신 이 블로그를 만드는 프로젝트입니다.
 
 ---
 
@@ -36,3 +36,5 @@ git 주소 : https://github.com/LChanwoo/nextjs-blog
 - react-markdown
 
 - react-Notion
+
+- tailwindcss
