--- a/pages/portfolios/motto-maker.mdx
+++ b/pages/portfolios/motto-maker.mdx
@@ -13,12 +13,32 @@ git 주소 : https://github.com/LChanwoo/Motto_Maker
 <ImageProvider src={"/images/motto_example.png"}/>
 <ImageProvider src={"/images/motto_example2.png"}/>
 
-## 명언만들기 프로젝트
+## 팀원
+`기획자` 홍효림
+
+`디자인` 송지민, 차예린
+
+`개발자` 이찬우
+
+
+## 명언만들기 프로젝트 기능
 
 명언만들기 프로젝트는 다음과 같은 기능을 가지고 있습니다.
 
  - 문장을 랜덤 또는 직접 선택하여 이미지파일 명언을 만듭니다.
  - 작성된 명언 이미지 파일을 저장할 수 있습니다.
+
+## 명언만들기 프로젝트 사용 기술
+
+ - react
+
+ - swiper
+
+ - typescript
+
+ - css module
+
+##
 
 ## 명언만들기 프로젝트 구조
 
