--- a/pages/portfolios/motto-maker.mdx
+++ b/pages/portfolios/motto-maker.mdx
@@ -12,6 +12,16 @@ git 주소 : https://github.com/LChanwoo/Motto_Maker
 
 <ImageProvider src={"/images/motto_example.png"}/>
 <ImageProvider src={"/images/motto_example2.png"}/>
+<ImageProvider src={"/images/motto_example3.png"}/>
+
+## 명언만들기 프로젝트 소개
+
+명언만들기 프로젝트는 사용자가 원하는 문장을 선택하여 명언을 만드는 프로젝트입니다.
+
+## 명언만들기 프로젝트 개발기간
+
+2022.08.26 ~ 2023.01.13
+
 
 ## 팀원
 `기획자` 홍효림
@@ -38,7 +48,22 @@ git 주소 : https://github.com/LChanwoo/Motto_Maker
 
  - css module
 
-##
+## 명언만들기 프로젝트 개발 환경
+
+ - vscode
+
+ - git
+
+ - github
+
+ - vercel
+
+ - figma
+
+ - notion
+
+ - slack
+
 
 ## 명언만들기 프로젝트 구조
 
