--- a/pages/portfolios/motto-maker.mdx
+++ b/pages/portfolios/motto-maker.mdx
@@ -1,11 +1,11 @@
 import { Callout } from 'nextra-theme-docs'
 import { ImageProvider } from '/components/ImageProvider'
 
-<Callout type="warning" emoji="⚠️">
+{/* <Callout type="warning" emoji="⚠️">
   이 문서는 현재 작성중입니다.
-</Callout>
+</Callout> */}
 
-# 명언만들기 프로젝트
+# 좌우명만들기 프로젝트
 주소 : https://motto-maker.vercel.app/
 
 git 주소 : https://github.com/LChanwoo/Motto_Maker
@@ -14,11 +14,11 @@ git 주소 : https://github.com/LChanwoo/Motto_Maker
 <ImageProvider src={"/images/motto_example2.png"}/>
 <ImageProvider src={"/images/motto_example3.png"}/>
 
-## 명언만들기 프로젝트 소개
+## 좌우명만들기 프로젝트 소개
 
-명언만들기 프로젝트는 사용자가 원하는 문장을 선택하여 명언을 만드는 프로젝트입니다.
+좌우명만들기 프로젝트는 사용자가 원하는 문장을 선택하여 좌우명을 만드는 프로젝트입니다.
 
-## 명언만들기 프로젝트 개발기간
+## 좌우명만들기 프로젝트 개발기간
 
 2022.08.26 ~ 2023.01.13
 
@@ -31,14 +31,14 @@ git 주소 : https://github.com/LChanwoo/Motto_Maker
 `개발자` 이찬우
 
 
-## 명언만들기 프로젝트 기능
+## 좌우명만들기 프로젝트 기능
 
-명언만들기 프로젝트는 다음과 같은 기능을 가지고 있습니다.
+좌우명만들기 프로젝트는 다음과 같은 기능을 가지고 있습니다.
 
- - 문장을 랜덤 또는 직접 선택하여 이미지파일 명언을 만듭니다.
- - 작성된 명언 이미지 파일을 저장할 수 있습니다.
+ - 문장을 랜덤 또는 직접 선택하여 이미지파일 좌우명을 만듭니다.
+ - 작성된 좌우명 이미지 파일을 저장할 수 있습니다.
 
-## 명언만들기 프로젝트 사용 기술
+## 좌우명만들기 프로젝트 사용 기술
 
  - react
 
@@ -48,7 +48,7 @@ git 주소 : https://github.com/LChanwoo/Motto_Maker
 
  - css module
 
-## 명언만들기 프로젝트 개발 환경
+## 좌우명만들기 프로젝트 개발 환경
 
  - vscode
 
@@ -65,9 +65,9 @@ git 주소 : https://github.com/LChanwoo/Motto_Maker
  - slack
 
 
-## 명언만들기 프로젝트 구조
+## 좌우명만들기 프로젝트 구조
 
-명언만들기 프로젝트는 다음과 같은 구조를 가지고 있습니다.
+좌우명만들기 프로젝트는 다음과 같은 구조를 가지고 있습니다.
 ```
 📦src
  ┣ 📂components
@@ -107,3 +107,6 @@ git 주소 : https://github.com/LChanwoo/Motto_Maker
  ┣ 📜scale.module.css
  ┗ 📜setupTests.ts
  ```
+
+ ## 도움을 준 사람들
+ - 서명인 , 조경철, 이진영, 노수민
