--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,8 +2,82 @@
 
 import {IndexPage} from '/components/IndexPage'
 
+
+![header](https://capsule-render.vercel.app/api?type=waving&color=auto&height=200&section=header&text=Welcome!&fontSize=90&desc=Hello%20I'm%20Aldrich%20Lee&descAlign=60&descAlignY=20&fontAlignY=40)
+
 <IndexPage/>
- 
+{/* <h3 align="center"> 안녕하세요 👋 </h3>
+<p align="center"> 개발자 이찬우입니다!</p> */}
+
+
+
+---
+
+<h3 align="center"> 기술 Stack </h3>
+
+<div align="center">
+  <img src="https://img.shields.io/badge/nodejs-green?style=flat&logo=Node.js&logoColor=white"/>
+  <img src="https://img.shields.io/badge/HTML5-red?style=flat&logo=HTML5&logoColor=white"/>
+  <img src="https://img.shields.io/badge/CSS3-blue?style=flat&logo=CSS3&logoColor=white"/>
+  <img src="https://img.shields.io/badge/JavaScript-yellow?style=flat&logo=JavaScript&logoColor=white"/>
+  <img src="https://img.shields.io/badge/TypeScript-blue?style=flat&logo=TypeScript&logoColor=white"/>
+  <img src="https://img.shields.io/badge/Java-Purple?style=flat&logo=Java&logoColor=white"/>
+</div>
+<br/>
+<div align="center">
+  <img src="https://img.shields.io/badge/react-blue?style=flat&logo=react&logoColor=white"/>
+  <img src="https://img.shields.io/badge/Next.js-yellow?style=flat&logo=Next.js&logoColor=white"/>
+  <img src="https://img.shields.io/badge/TailwindCss-blue?style=flat&logo=Tailwind CSS&logoColor=white"/>
+</div>
+<br/>
+<div align="center">
+  <img src="https://img.shields.io/badge/NestJs-black?style=flat&logo=NestJs&logoColor=red"/>
+  <img src="https://img.shields.io/badge/Express.js-yellow?style=flat&logo=Express&logoColor=white"/>
+  <img src="https://img.shields.io/badge/SpringBoot-green?style=flat&logo=Spring Boot&logoColor=white"/>
+</div>
+<br/>
+<div align="center">
+  <img src="https://img.shields.io/badge/PM2-black?style=flat&logo=PM2&logoColor=white"/>
+  <img src="https://img.shields.io/badge/npm-black?style=flat&logo=npm&logoColor=white"/>
+  <img src="https://img.shields.io/badge/Axios-black?style=flat&logo=Axios&logoColor=white"/>
+  <img src="https://img.shields.io/badge/vercel-black?style=flat&logo=vercel&logoColor=white"/>
+  <img src="https://img.shields.io/badge/Amazon AWS-black?style=flat&logo=Amazon AWS&logoColor=white"/>
+  <img src="https://img.shields.io/badge/Amazon EC2-black?style=flat&logo=Amazon EC2&logoColor=white"/>
+</div>
+<br/>
+<h5 align="center"> 협업툴 </h5>
+<div align="center">
+  <img src="https://img.shields.io/badge/Notion-black?style=flat&logo=Notion&logoColor=white"/>
+  <img src="https://img.shields.io/badge/Slack-black?style=flat&logo=Slack&logoColor=white"/>
+  <img src="https://img.shields.io/badge/Figma-black?style=flat&logo=Figma&logoColor=white"/>
+  <img src="https://img.shields.io/badge/Telegram-black?style=flat&logo=Telegram&logoColor=white"/>
+</div>
+
+<br/>
+<br/>
+<br/>
+
+<div align="center">
+  
+![Top Langs](https://github-readme-stats-git-masterrstaa-rickstaa.vercel.app/api/top-langs/?username=LChanwoo&layout=compact&theme=monokai)
+
+</div>
+
+<div align="center">
+  
+![Anurag's GitHub stats](https://github-readme-stats-git-masterrstaa-rickstaa.vercel.app/api?username=LChanwoo&show_icons=true&theme=monokai)
+
+</div>
+
+<div align="center">
+
+[![Hits](https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2FLChanwoo&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false)](https://hits.seeyoufarm.com)  
+  
+</div>
+
+
+![header](https://capsule-render.vercel.app/api?type=waving&color=auto&height=100&section=footer&text=Thank%20you&fontSize=60)
+
 ---
 
 이 블로그는 vercel의 nextjs blog 템플릿 ([Nextra](https://nextra.vercel.app/)) 로 작성되었습니다.
