--- a/pages/portfolios/BAROGO.mdx
+++ b/pages/portfolios/BAROGO.mdx
@@ -10,9 +10,6 @@ https://github.com/LChanwoo/BAROGO/tree/chanwoo
   역할
  프론트엔드, 백엔드, 서버빌드
 
-  사용언어
- JAVA, MYSQL, JavaScript Windows, centOS
-
   기간
  2022.03.29 ~ 2022.04.29 (1달)
 
@@ -24,13 +21,13 @@ https://github.com/LChanwoo/BAROGO/tree/chanwoo
 ## [활용기술]
 Languages: Java, JavaScript
 
-Operating System: Window 10, Linux centOS 7.8
+Operating System: Linux centOS 7.8
 
 Web Skills: JSP, CSS, HTML, Jquery
 
 DB: MYSQL, Mybatis-framework
 
-And : Jenkins,Git,Notion,Trello,REST API 방법론
+ETC : Jenkins,Git,Notion,Trello,REST API
 
 ## [담당부분]
 기획 : 호텔관련 
