--- a/pages/portfolios/motto-maker.mdx
+++ b/pages/portfolios/motto-maker.mdx
@@ -11,8 +11,8 @@ import { ImageProvider } from '/components/ImageProvider'
 git 주소 : https://github.com/LChanwoo/Motto_Maker
 
 <ImageProvider src={"/images/motto_example4.png"}/>
-<ImageProvider src={"/images/motto_example.png"}/>
 <ImageProvider src={"/images/motto_example3.png"}/>
+<ImageProvider src={"/images/motto_example5.png"}/>
 
 ## 좌우명만들기 프로젝트 소개
 
